force-app/main/default/objects/Order__c/fields/DANAHERPERIODENDDATE__c.field-meta.xml
<CustomField>
    <fullName>DANAHERPERIODENDDATE__c</fullName>
    <label>Danaher Period End Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>