force-app/main/default/objects/Order__c/fields/Expected__c.field-meta.xml
<CustomField>
    <fullName>Expected__c</fullName>
    <label>Expected</label>
    <type>Date</type>
</CustomField>