force-app/main/default/objects/Order__c/fields/Forecast_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Opportunity__c</fullName>
    <label>Forecast Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>