force-app/main/default/objects/Order__c/fields/Legalization__c.field-meta.xml
<CustomField>
    <fullName>Legalization__c</fullName>
    <label>Legalization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>