force-app/main/default/objects/Order__c/fields/Misc_Notes__c.field-meta.xml
<CustomField>
    <fullName>Misc_Notes__c</fullName>
    <label>Misc Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>