force-app/main/default/objects/Order__c/fields/Production_Notes__c.field-meta.xml
<CustomField>
    <fullName>Production_Notes__c</fullName>
    <label>Production Notes</label>
    <type>TextArea</type>
</CustomField>