force-app/main/default/objects/Order__c/fields/PROFORMA_DATE__c.field-meta.xml
<CustomField>
    <fullName>PROFORMA_DATE__c</fullName>
    <label>Proforma Date</label>
    <type>Date</type>
</CustomField>