force-app/main/default/objects/Order__c/fields/Proforma_Number__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Number__c</fullName>
    <label>Proforma Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>