force-app/main/default/objects/Order__c/fields/SALES_NOTES__c.field-meta.xml
<CustomField>
    <fullName>SALES_NOTES__c</fullName>
    <label>Sales Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>