force-app/main/default/objects/Order__c/fields/SHIPCITY__c.field-meta.xml
<CustomField>
    <fullName>SHIPCITY__c</fullName>
    <label>Shipping City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>