force-app/main/default/objects/Order__c/fields/Shipment_Company__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Company__c</fullName>
    <label>Shipment Company</label>
    <length>150</length>
    <type>Text</type>
</CustomField>