force-app/main/default/objects/Order__c/fields/Shipping_Region__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Region__c</fullName>
    <label>Shipping Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--none--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>