force-app/main/default/objects/Order__c/fields/Tax_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_2__c</fullName>
    <label>Tax Amount 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>