force-app/main/default/objects/Order__c/fields/Tax_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Name_1__c</fullName>
    <label>Tax Name 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>