force-app/main/default/objects/Order__c/fields/Tax_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Tax_Name_2__c</fullName>
    <label>Tax Name 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>