force-app/main/default/objects/Order__c/fields/This_Year__c.field-meta.xml
<CustomField>
    <fullName>This_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This Year</label>
    <type>Checkbox</type>
</CustomField>