force-app/main/default/objects/Order__c/fields/Unique_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Order_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unique Order ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>