force-app/main/default/objects/Order__c/fields/UNIQUEPROFORMAID__c.field-meta.xml
<CustomField>
    <fullName>UNIQUEPROFORMAID__c</fullName>
    <label>Unique Proforma ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>