force-app/main/default/objects/Order__c/fields/VIQUA_TERRITORY__c.field-meta.xml
<CustomField>
    <fullName>VIQUA_TERRITORY__c</fullName>
    <label>Viqua Territory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>