force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Account__c</columns>
    <columns>Expected__c</columns>
    <columns>Order_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>